--- a/conference_poster_5.tex
+++ b/conference_poster_5.tex
@@ -134,6 +134,7 @@ Turpis $j$ amet accumsan enim $y$-lacina;
 ref $k$-viverra nec porttitor $x$-lacina. 
 
 Vestibulum ac diam a odio tempus congue. Vivamus id enim nisi:
+qiero algo 
 
 \begin{eqnarray}
 \cos\bar{\phi}_k Q_{j,k+1,t} + Q_{j,k+1,x}+\frac{\sin^2\bar{\phi}_k}{T\cos\bar{\phi}_k} Q_{j,k+1} &=&\nonumber\\ 
